# Cpeed

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CREDITS.md  README.md
Cpeed/: CMakeLists.txt  backend.c  backend.h  input.h  main.c  main.h  platform.h  vulkan.c  vulkan.h  window.h
Cpeed/cmake/: EnableVulkanBackend.cmake
Cpeed/common/: device.c  device.h  device.queue_init.c  device.queue_init.h  frame.c  frame.h  general.c  general.h  image.h  init.c  init.h  math.c  math.h  renderer.c  renderer.h  renderer.queue_init.c  renderer.queue_init.h  shortcuts.c  shortcuts.h  surface.h  swapchain.c  swapchain.h  window.h
Cpeed/common/backend/vulkan/: backend.c  backend.h  device.c  device.h  device.queue_init.c  image.c  image.h  renderer.c  renderer.h  surface.c  surface.h  swapchain.h
Cpeed/common/backend/vulkan/rendering/: rendering.h
Cpeed/common/frame_layers/: test_layer.c  test_layer.h
Cpeed/common/imgui/: imgui_impl_cpeed.c  imgui_impl_cpeed.h
Cpeed/common/rendering/: rendering.c  rendering.h
Cpeed/directx/: CMakeLists.txt  backend.c  backend.h  directx.h
Cpeed/input/: clipboard.h  gamepad.h  keyboard.h  mouse.h
Cpeed/linux/: CMakeLists.txt  linuxevent.c  linuxevent.h  linuxframe.c  linuxinit.c  linuxinput.c  linuxinput.h  linuxlock.c  linuxlogging.c  linuxmain.c  linuxmain.h  linuxwayland.c  linuxwayland.h  linuxwindow.c  linuxwindowlist.c  linuxwindowlist.h
Cpeed/linux/backend/: vulkan.c
Cpeed/platform/: dialog.h  file.h  frame.h  init.h  input.h  lock.h  logging.h  thread.h  window.h
Cpeed/platform/backend/: vulkan.h
Cpeed/platform/input/: gamepad.h  mode.h  queue.h
Cpeed/uwp/: AppView.cpp  AppView.h  CMakeLists.txt  main.cpp  main.h  mainstub.c  uwpframe.c  uwpinit.c  uwpinput.c  uwplogging.c  uwpmain.c  uwpmain.h  uwpqueue.c  uwpwindow.c
Cpeed/vulkan/: CMakeLists.txt  backend.c  backend.h  device.c  device.h  device.queue_init.h  image.h  renderer.c  renderer.h  surface.c  surface.h  swapchain.c  swapchain.h  vulkan.h
Cpeed/vulkan/rendering/: rendering.c  rendering.h
Cpeed/windows/: CMakeLists.txt  winframe.c  wininit.c  wininput.c  winlock.c  winmain.c  winmain.h  winproc.c  winproc.h  winwindow.c
Cpeed/windows/backend/: vulkan.c
backends/CpeedDirectX/: CMakeLists.txt  backend.c  backend.h  directx.h
backends/CpeedRSX/: CMakeLists.txt  backend.c  backend.h  device.h  ppu-lv2-game.h
backends/CpeedRSX/imgui/: dcimgui_impl_rsx.c  dcimgui_impl_rsx.h
backends/CpeedVulkan/: CMakeLists.txt  backend.c  backend.h  device.c  device.h  image.h  renderer.c  renderer.h  surface.c  surface.h  swapchain.h
backends/CpeedVulkan/rendering/: rendering.c  rendering.h
toolchains/: linux-gcc-arm64.cmake  linux-gcc-x64.cmake  ps3-gcc-powerpc64.cmake  uwp-msvc-arm.cmake  uwp-msvc-arm64.cmake  uwp-msvc-x64.cmake  win-msvc-x64.cmake
